	* new function getPrivateKeyPassword() (with i18n support), to replace
	  the generic function getPassword(question, save_password)
	* new in options dialog : specify the path of GPG, show the FireGPG official
	  website.
	* Shorter version of names : firegpgSelect -> Selection, 
	  Selection.isSelectionEditable -> isEditable, getSelection -> get,
	  setSelection -> set.
	* new optional argument in getPrivateKeyPassword : savePassword.
	* FireGPG_GPG* -> GPG (because it's shorter and we have the already the namespace)
	* some orthography errors fixed in the french/english locales
	* all warnings/errors found are fixed (password.xul, password.js...)

2007-03-04  Achraf cherti
	* the default private key is saved and selected by default when
	  the options dialog is loaded.
	* TODO file added.
	* somes improvements in the style of the code and the indentation 
	  of *.xul.
	* FileGPG_GPG.cleanTmpPath(), FileGPG_GPG.getTmpPath() and 
	  FileGPG_GPG.getTmpFile() moved to misc.js. There names are
	  now removeFile(), getTmpDir() and getTmpFile().
	* FireGPG_GPG.putIntoFile() and FireGPG_GPG.getFromFile()
	  are moved to misc.js. There names are now putIntoFile()
	  and getFromFile().
	* FireGPG_GPG.runCommand() is moved to misc.js. The new name
	  is runCommand().
	* new dialog to enter the private key password.
	* new function getPassword() to get the private key password.
	* new dialog to show texts (showtext.xul)
	* new functions to show a text in showtext.js and misc.js (showText)

2007-03-04  Maximilien Cuony
	* Some modification for errors of improvements of code's style
	* Re-Implementation of firegpgGPG.listkey(private)
	* List key in option dialog show only private keys now
	* Add implementation for show the option dialog with the menu
	* Class cselect : can now get the selection of texts (not textarea or input)
	* Fix an error in the popup system
	* Class select : getSelection work !
	* Class select : isSelectionEdit implemented