@@ -5,8 +5,9 @@ Tâches de Maximilien :
 
 Tâches d'Achraf :
 	- Boite de dialogue pour sélectionner la clé publique
-	- option pour activer/désactiver la pub du site de FireGPG
 	- dans showtext, au lieu de "The result of the operation" afficher un
 	  texte dynamique selon l'opération. Par exemple "The result of the 
 	  verification".
 	- option pour choisir le chemin de gpg
+	- Finir tous mes TODO dans le code :)
+	- write the default options in defaults/preferences
