@@ -3,6 +3,6 @@ signFailedPassword=Sign failed. The password is not good.
 verifFailed=This message can't be verified.
 verifSuccess=This message is signed with a good key of 
 cryptFailed=Unknown error, crypt failed.
-dcryptFailed=Decrypt failed, unknown error.
-dcryptFailedPassword=Decrypt failed. The password is not good.
+decryptFailed=Decrypt failed, unknown error.
+decryptFailedPassword=Decrypt failed. The password is not good.
 passwordDialogEnterPrivateKey=Enter your private key :
